Stop running addon tests for all branches except mozilla-central (#469)

--- a/config/production/release.json
+++ b/config/production/release.json
@@ -107,8 +107,7 @@
                 ],
                 "testruns": [
                     "functional",
-                    "remote",
-                    "addons"
+                    "remote"
                 ],
                 "platforms": {
                     "linux": [
@@ -172,8 +171,7 @@
                 ],
                 "testruns": [
                     "functional",
-                    "remote",
-                    "addons"
+                    "remote"
                 ],
                 "platforms": {
                     "linux": [
@@ -211,8 +209,7 @@
                 ],
                 "testruns": [
                     "functional",
-                    "remote",
-                    "addons"
+                    "remote"
                 ],
                 "platforms": {
                     "linux": [
@@ -250,8 +247,7 @@
                 ],
                 "testruns": [
                     "functional",
-                    "remote",
-                    "addons"
+                    "remote"
                 ],
                 "platforms": {
                     "linux": [
