--- a/config/staging/release.json
+++ b/config/staging/release.json
@@ -78,8 +78,7 @@
                 ],
                 "testruns": [
                     "functional",
-                    "remote",
-                    "addons"
+                    "remote"
                 ],
                 "platforms": {
                     "linux": [
@@ -111,8 +110,7 @@
                 ],
                 "testruns": [
                     "functional",
-                    "remote",
-                    "addons"
+                    "remote"
                 ],
                 "platforms": {
                     "linux": [
@@ -144,8 +142,7 @@
                 ],
                 "testruns": [
                     "functional",
-                    "remote",
-                    "addons"
+                    "remote"
                 ],
                 "platforms": {
                     "linux": [
@@ -177,8 +174,7 @@
                 ],
                 "testruns": [
                     "functional",
-                    "remote",
-                    "addons"
+                    "remote"
                 ],
                 "platforms": {
                     "linux": [
