--- a/config/production/release.json
+++ b/config/production/release.json
@@ -74,8 +74,12 @@
         "by_branch": {
             "release-mozilla-beta": {
                 "locales": [
+                    "ach",
+                    "af",
                     "ar",
+                    "be",
                     "bg",
+                    "bn-BD",
                     "bs",
                     "ca",
                     "cs",
@@ -92,9 +96,12 @@
                     "eu",
                     "fi",
                     "fr",
+                    "gl",
                     "he",
+                    "hi-IN",
                     "hr",
                     "hu",
+                    "hy-AM",
                     "id",
                     "is",
                     "it",
@@ -114,6 +121,7 @@
                     "ru",
                     "sk",
                     "sl",
+                    "sq",
                     "sr",
                     "sv-SE",
                     "th",
@@ -156,8 +164,12 @@
             },
             "release-mozilla-release": {
                 "locales": [
+                    "ach",
+                    "af",
                     "ar",
+                    "be",
                     "bg",
+                    "bn-BD",
                     "bs",
                     "ca",
                     "cs",
@@ -174,9 +186,12 @@
                     "eu",
                     "fi",
                     "fr",
+                    "gl",
                     "he",
+                    "hi-IN",
                     "hr",
                     "hu",
+                    "hy-AM",
                     "id",
                     "is",
                     "it",
@@ -196,6 +211,7 @@
                     "ru",
                     "sk",
                     "sl",
+                    "sq",
                     "sr",
                     "sv-SE",
                     "th",
