Adding batch 7 of locales for beta and release (#270)

--- a/config/production/release.json
+++ b/config/production/release.json
@@ -77,9 +77,11 @@
                     "ach",
                     "af",
                     "ar",
+                    "ast",
                     "be",
                     "bg",
                     "bn-BD",
+                    "bn-IN",
                     "bs",
                     "ca",
                     "cs",
@@ -89,6 +91,7 @@
                     "en-GB",
                     "en-US",
                     "en-ZA",
+                    "eo",
                     "es-CL",
                     "es-ES",
                     "es-MX",
@@ -96,6 +99,8 @@
                     "eu",
                     "fi",
                     "fr",
+                    "fy-NL",
+                    "ga-IE",
                     "gl",
                     "he",
                     "hi-IN",
@@ -107,10 +112,13 @@
                     "it",
                     "ja",
                     "ja-JP-mac",
+                    "km",
                     "ko",
                     "lt",
                     "lv",
                     "mk",
+                    "ml",
+                    "mr",
                     "nb-NO",
                     "nl",
                     "nn-NO",
@@ -119,11 +127,13 @@
                     "pt-PT",
                     "ro",
                     "ru",
+                    "si",
                     "sk",
                     "sl",
                     "sq",
                     "sr",
                     "sv-SE",
+                    "ta",
                     "th",
                     "tr",
                     "uk",
@@ -167,9 +177,11 @@
                     "ach",
                     "af",
                     "ar",
+                    "ast",
                     "be",
                     "bg",
                     "bn-BD",
+                    "bn-IN",
                     "bs",
                     "ca",
                     "cs",
@@ -179,6 +191,7 @@
                     "en-GB",
                     "en-US",
                     "en-ZA",
+                    "eo",
                     "es-CL",
                     "es-ES",
                     "es-MX",
@@ -186,6 +199,8 @@
                     "eu",
                     "fi",
                     "fr",
+                    "fy-NL",
+                    "ga-IE",
                     "gl",
                     "he",
                     "hi-IN",
@@ -197,10 +212,13 @@
                     "it",
                     "ja",
                     "ja-JP-mac",
+                    "km",
                     "ko",
                     "lt",
                     "lv",
                     "mk",
+                    "ml",
+                    "mr",
                     "nb-NO",
                     "nl",
                     "nn-NO",
@@ -209,11 +227,13 @@
                     "pt-PT",
                     "ro",
                     "ru",
+                    "si",
                     "sk",
                     "sl",
                     "sq",
                     "sr",
                     "sv-SE",
+                    "ta",
                     "th",
                     "tr",
                     "uk",
