Adding batch 9 of locales for beta and release (#270)

--- a/config/production/release.json
+++ b/config/production/release.json
@@ -88,9 +88,11 @@
                     "bs",
                     "ca",
                     "cs",
+                    "csb",
                     "cy",
                     "da",
                     "de",
+                    "dsb",
                     "el",
                     "en-GB",
                     "en-US",
@@ -111,6 +113,7 @@
                     "he",
                     "hi-IN",
                     "hr",
+                    "hsb",
                     "hu",
                     "hy-AM",
                     "id",
@@ -122,14 +125,20 @@
                     "km",
                     "kn",
                     "ko",
+                    "ku",
+                    "lij",
                     "lt",
                     "lv",
+                    "mai",
                     "mk",
                     "ml",
                     "mr",
+                    "ms",
                     "nb-NO",
                     "nl",
                     "nn-NO",
+                    "or",
+                    "pa-IN",
                     "pl",
                     "pt-BR",
                     "pt-PT",
@@ -198,9 +207,11 @@
                     "bs",
                     "ca",
                     "cs",
+                    "csb",
                     "cy",
                     "da",
                     "de",
+                    "dsb",
                     "el",
                     "en-GB",
                     "en-US",
@@ -221,6 +232,7 @@
                     "he",
                     "hi-IN",
                     "hr",
+                    "hsb",
                     "hu",
                     "hy-AM",
                     "id",
@@ -232,14 +244,20 @@
                     "km",
                     "kn",
                     "ko",
+                    "ku",
+                    "lij",
                     "lt",
                     "lv",
+                    "mai",
                     "mk",
                     "ml",
                     "mr",
+                    "ms",
                     "nb-NO",
                     "nl",
                     "nn-NO",
+                    "or",
+                    "pa-IN",
                     "pl",
                     "pt-BR",
                     "pt-PT",
