Adding batch 10 of locales for beta and release (#270)

--- a/config/production/release.json
+++ b/config/production/release.json
@@ -148,17 +148,21 @@
                     "si",
                     "sk",
                     "sl",
+                    "son",
                     "sq",
                     "sr",
                     "sv-SE",
+                    "sw",
                     "ta",
                     "te",
                     "th",
                     "tr",
                     "uk",
                     "vi",
+                    "xh",
                     "zh-CN",
-                    "zh-TW"
+                    "zh-TW",
+                    "zu"
                 ],
                 "testruns": [
                     "functional",
@@ -267,17 +271,21 @@
                     "si",
                     "sk",
                     "sl",
+                    "son",
                     "sq",
                     "sr",
                     "sv-SE",
+                    "sw",
                     "ta",
                     "te",
                     "th",
                     "tr",
                     "uk",
                     "vi",
+                    "xh",
                     "zh-CN",
-                    "zh-TW"
+                    "zh-TW",
+                    "zu"
                 ],
                 "testruns": [
                     "functional",
