Update pulse config to use Ubuntu 14.04 instead of 12.04 (#453)

--- a/config/ondemand/l10n-linux.ini
+++ b/config/ondemand/l10n-linux.ini
@@ -2,7 +2,6 @@
 script=l10n
 report=http://mozauto.iriscouch.com/mozmill-release/
 
-[linux ubuntu 12.04 32bit]
+[linux ubuntu 14.04 32bit]
 platform=linux
-21.0=en-US
-22.0=en-US
+31.0esr=en-US
