--- a/config/production/release.json
+++ b/config/production/release.json
@@ -101,6 +101,8 @@
                     "win32": [
                         "windows && xp && 32bit",
                         "windows && vista && 32bit",
+                        "windows && 7 && 32bit",
+                        "windows && 7 && 64bit",
                         "windows && 8 && 32bit",
                         "windows && 8 && 64bit",
                         "windows && 8.1 && 32bit",
