Enable Firefox win64 builds for beta and release (#566)

--- a/config/production/release.json
+++ b/config/production/release.json
@@ -11,7 +11,8 @@
             "linux64",
             "macosx",
             "macosx64",
-            "win32"
+            "win32",
+            "win64"
         ],
         "products": [
             "firefox"
@@ -107,6 +108,11 @@
                         "windows && 8 && 64bit",
                         "windows && 8.1 && 32bit",
                         "windows && 8.1 && 64bit"
+                    ],
+                    "win64": [
+                        "windows && 7 && 64bit",
+                        "windows && 8 && 64bit",
+                        "windows && 8.1 && 64bit"
                     ]
                 }
             },
@@ -145,6 +151,11 @@
                         "windows && 8 && 32bit",
                         "windows && 8 && 64bit",
                         "windows && 8.1 && 32bit",
+                        "windows && 8.1 && 64bit"
+                    ],
+                    "win64": [
+                        "windows && 7 && 64bit",
+                        "windows && 8 && 64bit",
                         "windows && 8.1 && 64bit"
                     ]
                 }
