--- a/config/production/release.json
+++ b/config/production/release.json
@@ -4,6 +4,7 @@
         "branches": [
             "release-mozilla-beta",
             "release-mozilla-release",
+            "release-mozilla-esr38",
             "release-mozilla-esr31"
         ],
         "platforms": [
@@ -160,12 +161,50 @@
                     ]
                 }
             },
+            "release-mozilla-esr38": {
+                "locales": [
+                    "de",
+                    "en-US",
+                    "ru",
+                    "zh-TW"
+                ],
+                "testruns": [
+                    "functional",
+                    "remote"
+                ],
+                "platforms": {
+                    "linux": [
+                        "linux && ubuntu && 14.04 && 32bit",
+                        "linux && ubuntu && 14.10 && 32bit"
+                    ],
+                    "linux64": [
+                        "linux && ubuntu && 14.04 && 64bit",
+                        "linux && ubuntu && 14.10 && 64bit"
+                    ],
+                    "mac": [
+                        "mac && 10.6 && 64bit",
+                        "mac && 10.7 && 64bit",
+                        "mac && 10.8 && 64bit",
+                        "mac && 10.9 && 64bit"
+                    ],
+                    "win32": [
+                        "windows && xp && 32bit",
+                        "windows && vista && 32bit",
+                        "windows && 7 && 32bit",
+                        "windows && 7 && 64bit",
+                        "windows && 8 && 32bit",
+                        "windows && 8 && 64bit",
+                        "windows && 8.1 && 32bit",
+                        "windows && 8.1 && 64bit"
+                    ]
+                }
+            },
             "release-mozilla-esr31": {
                 "locales": [
                     "de",
                     "en-US",
                     "ru",
-                    "zh-CN"
+                    "zh-TW"
                 ],
                 "testruns": [
                     "functional",
