--- a/config/staging/release.json
+++ b/config/staging/release.json
@@ -55,20 +55,15 @@
                     "value": "http://mozauto.iriscouch.com/mozmill-staging/"
                 }
             },
-            "endurance": {
-                "ENTITIES": {
-                    "value": 2
-                },
-                "ITERATIONS": {
-                    "value": 2
-                }
-            },
             "update": {
                 "BUILD_ID": {
                     "key": "previous_buildid"
                 },
                 "TARGET_BUILD_ID": {
                     "key": "buildid"
+                },
+                "TARGET_BUILD_REVISION": {
+                    "key": "revision"
                 }
             }
         },
