Kill all traces for esr31 builds (#614)

--- a/config/ondemand/l10n-mac.ini
+++ b/config/ondemand/l10n-mac.ini
@@ -4,5 +4,5 @@ report=http://mozauto.iriscouch.com/mozmill-release/
 
 [mac 10.10 64bit]
 platform=mac
-22.0#1=en-US
-22.0=en-GB en-US
+38.0esr#1=en-US
+38.0esr=en-GB en-US
