--- a/config/ondemand/update-override-update-url.ini
+++ b/config/ondemand/update-override-update-url.ini
@@ -11,4 +11,4 @@ override-update-url=https://aus4.mozilla.org/update/3/%PRODUCT%/%VERSION%/%BUILD
 
 [linux ubuntu 14.04 64bit]
 platform=linux64
-31.0b8=en-US
+38.0esr=en-US
