--- a/config/production/release.json
+++ b/config/production/release.json
@@ -66,8 +66,7 @@
                     "ru"
                 ],
                 "testruns": [
-                    "functional",
-                    "remote"
+                    "functional"
                 ],
                 "platforms": {
                     "linux": [
@@ -107,8 +106,7 @@
                     "ru"
                 ],
                 "testruns": [
-                    "functional",
-                    "remote"
+                    "functional"
                 ],
                 "platforms": {
                     "linux": [
@@ -140,8 +138,7 @@
                     "en-US"
                 ],
                 "testruns": [
-                    "functional",
-                    "remote"
+                    "functional"
                 ],
                 "platforms": {
                     "linux": [
