--- a/config/staging/release.json
+++ b/config/staging/release.json
@@ -58,8 +58,7 @@
                     "en-US"
                 ],
                 "testruns": [
-                    "functional",
-                    "remote"
+                    "functional"
                 ],
                 "platforms": {
                     "linux": [
@@ -91,8 +90,7 @@
                     "en-US"
                 ],
                 "testruns": [
-                    "functional",
-                    "remote"
+                    "functional"
                 ],
                 "platforms": {
                     "linux": [
@@ -124,8 +122,7 @@
                     "en-US"
                 ],
                 "testruns": [
-                    "functional",
-                    "remote"
+                    "functional"
                 ],
                 "platforms": {
                     "linux": [
