Add OS X 10.11 nodes and enable them in the pulse config (#669)

--- a/config/ondemand/functional-all.ini
+++ b/config/ondemand/functional-all.ini
@@ -6,11 +6,15 @@ report=http://mozauto.iriscouch.com/mozmill-release/
 platform=mac
 38.0esr=en-US
 
+[mac 10.9 64bit]
+platform=mac
+38.0esr=en-US
+
 [mac 10.10 64bit]
 platform=mac
 38.0esr=en-US
 
-[mac 10.8 64bit]
+[mac 10.11 64bit]
 platform=mac
 38.0esr=en-US
 
