--- a/config/jenkins.properties
+++ b/config/jenkins.properties
@@ -4,14 +4,6 @@ AWS_ACCESS_KEY_ID =
 AWS_SECRET_ACCESS_KEY =
 
 # Treeherder location and credentials for submitting test results
-TREEHERDER_URL =
-TREEHERDER_KEY_mozilla-central =
-TREEHERDER_SECRET_mozilla-central =
-TREEHERDER_KEY_mozilla-aurora =
-TREEHERDER_SECRET_mozilla-aurora =
-TREEHERDER_KEY_mozilla-beta =
-TREEHERDER_SECRET_mozilla-beta =
-TREEHERDER_KEY_mozilla-release =
-TREEHERDER_SECRET_mozilla-release =
-TREEHERDER_KEY_mozilla-esr38 =
-TREEHERDER_SECRET_mozilla-esr38 =
+TREEHERDER_URL=
+TREEHERDER_CLIENT_ID=
+TREEHERDER_SECRET=
