--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 kombu==3.0.26
 mercurial==3.5.2
 mozdownload==1.19
+mozprocess==0.22
 python-jenkins==0.4.8
+redo==1.5
 requests==2.7.0
 taskcluster==0.0.24
 
