--- a/jenkins-master/jobs/scripts/workspace/requirements.txt
+++ b/jenkins-master/jobs/scripts/workspace/requirements.txt
@@ -1,3 +1,12 @@
 boto==2.38.0
 mozinfo==0.8
 treeherder-client==2.0.1
+
+# Required by mozinfo
+mozfile==1.2
+
+# Required by treeherder-client
+mohawk==0.3.0
+requests==2.9.1
+requests-hawk==1.0.0
+six==1.10.0
