Convert ondemand update tests from Mozmill to Marionette (#765)

--- a/config/ondemand/update-allow-mar-channel.ini
+++ b/config/ondemand/update-allow-mar-channel.ini
@@ -5,12 +5,11 @@
 
 [testrun]
 script=update
-report=http://mozauto.iriscouch.com/mozmill-release/
-target-build-id=20140403132807
-channel=beta
 allow-mar-channel=firefox-mozilla-beta
+channel=beta
+target-revision=fb3494d06dfb
+target-version=46.0b1#8
 
 [mac 10.9 64bit]
 platform=mac
 38.0esr=en-US
-
