Move code from get_mozharness job into scripts and tests jobs (#745)

--- a/jenkins-master/.gitignore
+++ b/jenkins-master/.gitignore
@@ -22,6 +22,7 @@ identity.key.enc
 jenkins.mvn.GlobalMavenConfig.xml
 jobs/*/workspace/
 !jobs/scripts/workspace
+jobs/scripts/workspace/archiver_client.py
 !jobs/trigger-ondemand/workspace
 !jobs/trigger-ondemand-mozmill/workspace
 logs
