Execute functional and update tests for mozilla-central (linux64) via Taskcluster (#798)

--- a/config/jenkins.properties
+++ b/config/jenkins.properties
@@ -7,3 +7,7 @@ AWS_SECRET_ACCESS_KEY =
 TREEHERDER_URL=
 TREEHERDER_CLIENT_ID=
 TREEHERDER_SECRET=
+
+# Taskcluster client credentials
+TASKCLUSTER_CLIENT_ID=
+TASKCLUSTER_SECRET=
